--- a/index.html
+++ b/index.html
@@ -2293,12 +2293,20 @@ ${pad(beforeLine2,22)}${afterLine2}`;
       _selectedId = null;
       openBtn.disabled = true;
 
-      const systems = getSystems();  // uses the helpers from the Save step
+      const systems = getSystems()
+        .slice()
+        .sort((a, b) => {
+          const na = parseInt(String(a.id || '').replace(/\D/g, ''), 10) || 0;
+          const nb = parseInt(String(b.id || '').replace(/\D/g, ''), 10) || 0;
+          return na - nb;
+        });  // numeric sort by system number
+
       if (!systems.length){
         loadListEl.innerHTML =
           '<div style="padding:16px;color:#aaa">No saved systems found.</div>';
         return;
       }
+
 
       loadListEl.innerHTML = '';
       systems.forEach((s, idx)=>{
@@ -2345,16 +2353,23 @@ ${pad(beforeLine2,22)}${afterLine2}`;
       });
     }
     // System Manager: render list
-    // System Manager: render list
     function renderManagerList(){
       _managerSelectedId = null;
 
-      const systems = getSystems();
+      const systems = getSystems()
+        .slice()
+        .sort((a, b) => {
+          const na = parseInt(String(a.id || '').replace(/\D/g, ''), 10) || 0;
+          const nb = parseInt(String(b.id || '').replace(/\D/g, ''), 10) || 0;
+          return na - nb;
+        });  // numeric sort by system number
+
       if (!systems.length){
         managerListEl.innerHTML =
           '<div style="padding:16px;color:#aaa">No saved systems found.</div>';
         return;
       }
+
 
       managerListEl.innerHTML = '';
       systems.forEach((s, idx)=>{
