--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       --bg:#000; --fg:#e8ffe8; --accent:#00ff90; --muted:#8a8a8a; --danger:#ff4d6d; --mk:#00c8ff; --tmk:#ff00ff;
     }
     *{box-sizing:border-box}
-    html,body{height:100%;margin:0;background:var(--bg);color:var(--fg);font-family:-apple-system,system-ui,Helvetica,Arial}
+    html,body{height:100%;margin:0;background:url("background.png") center center/cover no-repeat fixed;color:var(--fg);font-family:-apple-system,system-ui,Helvetica,Arial}
     .wrap{max-width:900px;margin:0 auto;padding:20px}
     h1{font-size:24px;margin:6px 0 12px;color:var(--accent)}
     .card{background:#0e0e0e;border:1px solid #151515;border-radius:16px;padding:16px;margin:12px 0;box-shadow:0 8px 30px rgba(0,0,0,0.35)}
