--- a/index.html
+++ b/index.html
@@ -218,9 +218,10 @@
 </head>
 <body>
   <!-- Main Screen -->
-  <div id="mainScreen"
-       style="display:flex;flex-direction:column;justify-content:center;align-items:center;
-              height:100vh;text-align:center;background:#000;">
+    <div id="mainScreen"
+     style="display:flex;flex-direction:column;justify-content:center;align-items:center;
+            height:100vh;text-align:center;background:transparent;">
+
     <h1 style="font-size:38px;margin-bottom:40px;color:#00ff90;font-weight:700;">
       Welcome to CodeGen V5.5
     </h1>
