--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <title>CodeGen – Create System</title>
 
   <!-- PWA bits (keep standalone app feel) -->
@@ -13,9 +13,11 @@
   <meta name="theme-color" content="#00ff90">
 
   <style>
+    :root{padding:env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);}
     :root{
       --bg:#000; --fg:#e8ffe8; --accent:#00ff90; --muted:#8a8a8a; --danger:#ff4d6d; --mk:#00c8ff; --tmk:#ff00ff;
     }
+
     *{box-sizing:border-box}
     html,body{height:100%;margin:0;background:#000 url("background.png") center center/cover no-repeat fixed;color:var(--fg);font-family:-apple-system,system-ui,Helvetica,Arial}
 
