--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
 
     *{box-sizing:border-box}
-    html,body{height:100%;margin:0;background:#000 url("background.png") center center/cover no-repeat fixed;color:var(--fg);font-family:-apple-system,system-ui,Helvetica,Arial}
+    html,body{height:100%;margin:0;padding-top:env(safe-area-inset-top);background:#000 url("background.png") center center/cover no-repeat fixed;color:var(--fg);font-family:-apple-system,system-ui,Helvetica,Arial}
 
 
     .wrap{max-width:900px;margin:0 auto;padding:20px}
