--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
   <meta name="theme-color" content="#00ff90">
 
   <style>
+    :root{padding:env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);}
     :root{
       --bg:#000; --fg:#e8ffe8; --accent:#00ff90; --muted:#8a8a8a; --danger:#ff4d6d; --mk:#00c8ff; --tmk:#ff00ff;
     }
 
     *{box-sizing:border-box}
-    html,body{height:100%;margin:0;padding-top:env(safe-area-inset-top);background:#000 url("background.png") center center/cover no-repeat fixed;color:var(--fg);font-family:-apple-system,system-ui,Helvetica,Arial}
+    html,body{height:100%;margin:0;background:#000 url("background.png") center center/cover no-repeat fixed;color:var(--fg);font-family:-apple-system,system-ui,Helvetica,Arial}
 
 
     .wrap{max-width:900px;margin:0 auto;padding:20px}
