--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         <strong>Output</strong>
         <span class="tag" id="stats">—</span>
       </div>
-      <div id="out" class="out" aria-live="polite"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
+      <div id="out" class="out" aria-live="polite"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
       <div class="btnbar">
         <button id="copy">Copy</button>
         <button id="returnMain">Return to Main</button>
@@ -1088,7 +1088,7 @@ ${pad(beforeLine2,22)}${afterLine2}`;
     $('#clear').onclick = ()=>{
       $('#tmk').value = '';
       $('#array').value = '';
-      outEl.innerHTML = '<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>';
+      outEl.innerHTML = '<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>';
       statsEl.textContent = '—';
     };
 
