--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
       <button id="returnMainFromLoad">Return to Main</button>
       <button id="openSystem" class="primary" disabled>Open System</button>
     </div>
+    <div style="height:20px;"></div>
   </div>
 
 
@@ -287,6 +288,7 @@
       <button id="btnDelete" class="warn">Delete System</button>
       <button id="returnMainFromManager" class="primary">Return to Main</button>
     </div>
+    <div style="height:20px;"></div>
   </div>
 
   <!-- System Screen -->
