--- a/index.html
+++ b/index.html
@@ -624,11 +624,11 @@
      <div class="dialog">
        <h3>Fast Build Keys</h3>
        <p class="muted" style="margin:6px 0 12px 0;">
-         This will add all good codes from the Coding Tree into the Keys list, excluding bad codes.
+         Please choose your preferences below. Fast Build will automatically generate the full key list from the coding tree while excluding any bad codes.
        </p>
 
        <div style="margin-top:4px;">
-         <div class="muted" style="font-size:13px;margin-bottom:4px;">Conventions</div>
+         <div class="muted" style="font-size:13px;margin-bottom:4px;">Key Stamping Conventions</div>
          <div class="btnbar seg" style="justify-content:flex-start;margin-top:4px;">
            <button id="fbConvNumeric">MK1 &amp; 1-1</button>
            <button id="fbConvAlpha">MKA &amp; A-1</button>
