--- a/index.html
+++ b/index.html
@@ -2048,7 +2048,7 @@ ${pad(beforeLine2,22)}${afterLine2}`;
         <div style="display:flex;flex-direction:column;gap:10px;">
           <div class="muted" style="font-size:16px;font-weight:600;">Coding Check</div>
           <div id="codingCheckBox" class="out" style="max-height:60vh;overflow:auto;"></div>
-          <div class="btnbar" style="justify-content:flex-end;margin-top:10px;">
+          <div class="btnbar" style="justify-content:flex-end;margin-top:10px;margin-bottom:12px;">
             <button id="codingCheckSort">${sortLabel}</button>
             <button id="codingCheckClear">Clear</button>
             <button id="codingCheckRun" class="primary">Run</button>
